adding time synching, time embedded frames as well as video playing

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,45 @@
         android:id="@+id/downloadButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="50dp"
         android:text="Download Video"
-        android:layout_centerInParent="true"
         android:onClick="downloadVideo" />
+
+    <Button
+        android:id="@+id/SynchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp"
+        android:onClick="SynchTime"
+        android:text="Synch Time" />
+
+    <Button
+        android:id="@+id/selectVideoButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select Video"
+        android:layout_below="@id/SynchButton"
+        android:layout_centerHorizontal="true"
+        android:onClick="PLAY_VID"
+        android:layout_marginTop="50dp" />
 
     <VideoView
         android:id="@+id/videoView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/downloadButton"
-        android:layout_marginTop="16dp"
-        android:visibility="gone" />
+        android:layout_below="@id/selectVideoButton"
+        android:layout_marginTop="10dp" />
+    <!--        android:visibility="gone" />-->
+    <SeekBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/videoView"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="-23dp"
+        android:layout_marginRight="16dp" />
+    <!--        android:visibility="gone" -->
 </RelativeLayout>
