--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,50 +2,137 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/downloadButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="50dp"
-        android:text="Download Video"
-        android:onClick="downloadVideo" />
 
+    <LinearLayout
+        android:id="@+id/Topbuttons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
     <Button
         android:id="@+id/SynchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_centerHorizontal="false"
         android:layout_marginTop="0dp"
         android:onClick="SynchTime"
         android:text="Synch Time" />
+
+    <Button
+        android:id="@+id/mode_select_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="false"
+        android:layout_toRightOf="@id/SynchButton"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="10dp"
+
+        android:onClick="ModeSelect"
+        android:text="Mode Select" />
+    </LinearLayout>
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/cameraStatusContainer"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@id/Topbuttons"-->
+<!--        android:layout_marginTop="0dp"-->
+<!--        android:orientation="vertical"-->
+<!--        android:padding="2dp">-->
+
+<!--        &lt;!&ndash; Row for Camera 1 &ndash;&gt;-->
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/camera1Status"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                android:padding="1dp"-->
+<!--                android:text="Camera 1 Synced"-->
+<!--                android:textSize="12sp" />-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/camera1Checkmark"-->
+<!--                android:layout_width="12dp"-->
+<!--                android:layout_height="12dp"-->
+<!--                android:src="@android:drawable/checkbox_on_background"-->
+<!--                android:visibility="gone" />-->
+<!--        </LinearLayout>-->
+
+<!--        &lt;!&ndash; Row for Camera 2 &ndash;&gt;-->
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/camera2Status"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                android:text="Camera 2 Synced"-->
+<!--                android:textSize="12sp"-->
+<!--                android:padding="1dp" />-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/camera2Checkmark"-->
+<!--                android:layout_width="12dp"-->
+<!--                android:layout_height="12dp"-->
+<!--                android:src="@android:drawable/checkbox_on_background"-->
+<!--                android:visibility="gone" />-->
+<!--        </LinearLayout>-->
+<!--    </LinearLayout>-->
+
+    <LinearLayout
+        android:id="@+id/VideoButtons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_below="@id/Topbuttons"
+        android:layout_marginTop="0dp">
+
+        <Button
+            android:id="@+id/zipcreateButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Compress Video File"
+            android:layout_centerHorizontal="false"
+            android:onClick="createZipOnESP32"
+
+            />
+        <Button
+            android:id="@+id/downloadButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/zipcreateButton"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="10dp"
+            android:text="Download Video"
+            android:onClick="downloadVideo" />
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/selectVideoButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select Video"
-        android:layout_below="@id/SynchButton"
+        android:layout_below="@id/VideoButtons"
         android:layout_centerHorizontal="true"
         android:onClick="PLAY_VID"
-        android:layout_marginTop="50dp" />
-
-    <Button
-        android:id="@+id/zipcreateButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Compress Video File"
-        android:layout_below="@id/selectVideoButton"
-        android:layout_centerHorizontal="true"
-        android:onClick="createZipOnESP32"
-        android:layout_marginTop="5dp" />
+        android:layout_marginTop="0dp" />
 
     <VideoView
         android:id="@+id/videoView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/zipcreateButton"
+        android:layout_below="@id/progress_table"
         android:layout_marginTop="10dp" />
     <!--        android:visibility="gone" />-->
     <SeekBar
@@ -57,4 +144,112 @@
         android:layout_marginTop="-23dp"
         android:layout_marginRight="16dp" />
     <!--        android:visibility="gone" -->
+
+    <TableLayout
+        android:id="@+id/progress_table"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/selectVideoButton"
+        android:padding="16dp"
+        android:stretchColumns="1">
+
+        <!-- Table Header -->
+<!--        <TableRow>-->
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="ESP32 Status"-->
+<!--                android:textStyle="bold"-->
+<!--                android:layout_span="2"-->
+<!--                android:textSize="18sp"-->
+<!--                android:gravity="center"-->
+<!--                android:padding="8dp" />-->
+<!--        </TableRow>-->
+
+        <!-- Column Headers -->
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textStyle="bold"
+                android:padding="8dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ESP32-1"
+                android:textStyle="bold"
+                android:padding="8dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ESP32-2"
+                android:textStyle="bold"
+                android:padding="8dp" />
+        </TableRow>
+
+        <!-- Syncing Status Row -->
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Syncing Status"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/syncStatusESP32_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Not Synced"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/syncStatusESP32_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Not Synced"
+                android:padding="8dp" />
+        </TableRow>
+
+        <!-- Download Percentage Row -->
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Download %"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/downloadPercentageESP32_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0%"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/downloadPercentageESP32_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0%"
+                android:padding="8dp" />
+        </TableRow>
+
+        <!-- Mode Row -->
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mode"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/modeESP32_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Idle"
+                android:padding="8dp" />
+            <TextView
+                android:id="@+id/modeESP32_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Idle"
+                android:padding="8dp" />
+        </TableRow>
+
+    </TableLayout>
 </RelativeLayout>
