--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,62 +31,6 @@
         android:text="Mode Select" />
     </LinearLayout>
 
-<!--    <LinearLayout-->
-<!--        android:id="@+id/cameraStatusContainer"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@id/Topbuttons"-->
-<!--        android:layout_marginTop="0dp"-->
-<!--        android:orientation="vertical"-->
-<!--        android:padding="2dp">-->
-
-<!--        &lt;!&ndash; Row for Camera 1 &ndash;&gt;-->
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal">-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/camera1Status"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                android:padding="1dp"-->
-<!--                android:text="Camera 1 Synced"-->
-<!--                android:textSize="12sp" />-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/camera1Checkmark"-->
-<!--                android:layout_width="12dp"-->
-<!--                android:layout_height="12dp"-->
-<!--                android:src="@android:drawable/checkbox_on_background"-->
-<!--                android:visibility="gone" />-->
-<!--        </LinearLayout>-->
-
-<!--        &lt;!&ndash; Row for Camera 2 &ndash;&gt;-->
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal">-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/camera2Status"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                android:text="Camera 2 Synced"-->
-<!--                android:textSize="12sp"-->
-<!--                android:padding="1dp" />-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/camera2Checkmark"-->
-<!--                android:layout_width="12dp"-->
-<!--                android:layout_height="12dp"-->
-<!--                android:src="@android:drawable/checkbox_on_background"-->
-<!--                android:visibility="gone" />-->
-<!--        </LinearLayout>-->
-<!--    </LinearLayout>-->
-
     <LinearLayout
         android:id="@+id/VideoButtons"
         android:layout_width="match_parent"
@@ -117,16 +61,32 @@
             android:onClick="downloadVideo" />
     </LinearLayout>
 
-
-    <Button
-        android:id="@+id/selectVideoButton"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/PlayButtons"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Select Video"
+        android:orientation="horizontal"
+        android:gravity="center"
         android:layout_below="@id/VideoButtons"
-        android:layout_centerHorizontal="true"
-        android:onClick="PLAY_VID"
-        android:layout_marginTop="0dp" />
+        android:layout_marginTop="0dp">
+        <Button
+            android:id="@+id/selectVideoButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Video"
+            android:layout_centerHorizontal="true"
+            android:onClick="PLAY_VID" />
+
+        <Button
+            android:id="@+id/btnViewStream"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/selectVideoButton"
+            android:text="View Stream"
+            android:layout_centerInParent="true" />
+
+    </LinearLayout>
+
 
     <VideoView
         android:id="@+id/videoView"
@@ -149,7 +109,7 @@
         android:id="@+id/progress_table"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/selectVideoButton"
+        android:layout_below="@id/PlayButtons"
         android:padding="16dp"
         android:stretchColumns="1">
 
@@ -252,4 +212,6 @@
         </TableRow>
 
     </TableLayout>
+
+
 </RelativeLayout>
